# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_my_project.py
